--- a/src/Components/ParSticles/ParSticles.css
+++ b/src/Components/ParSticles/ParSticles.css
@@ -1,11 +1,5 @@
 .pars {
     background: black ;
-    height: 100% !important;
-    position: absolute;
+    height: 1000px;
     width: 100% ;
-}
-
-.tsparticles-canvas-el {
-    width: 100%;
-    height: 100%;
 }
