--- a/src/Components/ParSticles/Presentacion.css
+++ b/src/Components/ParSticles/Presentacion.css
@@ -10,7 +10,6 @@
     background: red;
     color: #ffffff;
     width: 30%;
-
     margin: auto;
     border-radius: 10px;
     margin-top: -650px;
@@ -39,10 +38,19 @@
 
 .data p {
     background: blue;
-    width: 20%;
+    width: 30%;
     border-radius: 100px;
     margin: auto;
     padding: 10px;
     text-align: center;
     font-family: var(--primary-font--);
+    color: #ffffff;
+}
+
+/*
+    ICONOS DEL PROGRAMER
+*/
+
+.data svg {
+    height: 20px;
 }
