--- a/src/Components/Technologies/CardTechnologie.css
+++ b/src/Components/Technologies/CardTechnologie.css
@@ -23,3 +23,10 @@
     padding-top: 10px;
     margin-top: 20px;
 }
+
+.card__progress p {
+    color: black;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+}
